# agv_eval_description

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: diff_drive_controller.yaml
launch/: agv_control.launch  gazebo.launch  spawn.launch
sample1/: agv_evaluation.urdf.xacro
sample1/base/: base.urdf.xacro
sample1/caster/: caster.urdf.xacro
sample1/wheel/: wheel.urdf.xacro
sample2/: agv_evaluation.urdf.xacro
sample2/base/: base.urdf.xacro
sample2/caster/: caster.urdf.xacro
sample2/wheel/: wheel.urdf.xacro
sample3/: agv_evaluation.urdf.xacro
sample3/base/: base.urdf.xacro
sample3/caster/: caster.urdf.xacro
sample3/front_unit/: front_unit.urdf.xacro
sample3/wheel/: wheel.urdf.xacro
urdf/: common.xacro
world/: test.world
