<?xml version="1.0" encoding="utf-8"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema" ?>

<package format="2">
  <name>agv_eval_description</name>

  <version>1.0.1</version>

  <description>
    <p>URDF package for the agv evaluation Kit</p>
  </description>

  <maintainer email="yamamoto.kazusige@jp.panasonic.com">Yamamoto Kazushige</maintainer>

  <license>BSD</license>

  <author email="yamamoto.kazusige@jp.panasonic.com">Yamamoto Kazushige</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>

  <exec_depend>teleop_twist_keyboard</exec_depend>
  <exec_depend>gazebo_ros_pkgs</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>ros_control</exec_depend>
  <exec_depend>ros_controllers</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <export>
    <architecture_independent />
  </export>
</package>
